--- a/repair-shop-mobile-frontend/src/app/brands/brands.page.html
+++ b/repair-shop-mobile-frontend/src/app/brands/brands.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>brands</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,3 +14,16 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="add">
+      <ion-icon name="add-circle"></ion-icon>
+      Add
+    </ion-tab-button>
+    <ion-tab-button tab="delete">
+      <ion-icon name="trash-sharp"></ion-icon>
+      Delete
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
