--- a/repair-shop-mobile-frontend/src/app/app.component.html
+++ b/repair-shop-mobile-frontend/src/app/app.component.html
@@ -50,7 +50,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item routerLink="/log-in">
+          <ion-item (click)="onLogOut()">
             <ion-icon name="log-out" slot="start"></ion-icon>
             <ion-label>Log out</ion-label>
           </ion-item>
