--- a/repair-shop-mobile-frontend/src/app/auth/log-in/log-in.page.html
+++ b/repair-shop-mobile-frontend/src/app/auth/log-in/log-in.page.html
@@ -29,7 +29,10 @@
       </ion-row>
       <ion-row>
         <ion-col size="6" offset="3">
-          <ion-button type="submit" expand="block" [disabled]="logInForm.invalid">Log in</ion-button>
+          <div class="ion-text-center">
+            <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+          </div>
+          <ion-button type="submit" expand="block" [disabled]="logInForm.invalid" *ngIf="!isLoading">Log in</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
