--- a/repair-shop-mobile-frontend/src/app/brands/explore/brand-details/brand-details.page.html
+++ b/repair-shop-mobile-frontend/src/app/brands/explore/brand-details/brand-details.page.html
@@ -4,6 +4,11 @@
       <ion-back-button defaultHref="/brands/tabs/explore"></ion-back-button>
     </ion-buttons>
     <ion-title>brand-details</ion-title>
+    <ion-buttons slot="end">
+      <ion-fab-button size="small" color="dark" (click)="onEditQuote()">
+        <ion-icon name="pencil"></ion-icon>
+      </ion-fab-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
