--- a/repair-shop-mobile-frontend/src/app/auth/register/register.page.html
+++ b/repair-shop-mobile-frontend/src/app/auth/register/register.page.html
@@ -49,7 +49,15 @@
       </ion-row>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <ion-button type="submit" expand="block">Register</ion-button>
+          <ion-button type="submit" expand="block" [disabled]="registerForm.invalid">Register</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="6" offset="3">
+          <div class="ion-text-center">
+            <p>Have an account?</p>
+          </div>
+          <ion-button expand="block" (click)="onSignIn()">Sign in</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
