--- a/repair-shop-mobile-frontend/src/app/brands/explore/explore.page.html
+++ b/repair-shop-mobile-frontend/src/app/brands/explore/explore.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button size="small" color="dark"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Explore</ion-title>
+    <ion-title>Brands</ion-title>
   </ion-toolbar>
 </ion-header>
 
