Finished car page

--- a/repair-shop-mobile-frontend/src/app/brands/explore/brand-details/brand-details.page.html
+++ b/repair-shop-mobile-frontend/src/app/brands/explore/brand-details/brand-details.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>brand-details</ion-title>
     <ion-buttons slot="end">
-      <ion-fab-button size="small" color="dark" (click)="onEditQuote()">
+      <ion-fab-button size="small" color="dark" (click)="onEditBrand()">
         <ion-icon name="pencil"></ion-icon>
       </ion-fab-button>
     </ion-buttons>
