Finished services page

--- a/repair-shop-mobile-frontend/src/app/app.component.html
+++ b/repair-shop-mobile-frontend/src/app/app.component.html
@@ -38,9 +38,9 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item routerLink="/prices">
+          <ion-item routerLink="/services">
             <ion-icon name="card-outline" slot="start"></ion-icon>
-            <ion-label>Prices</ion-label>
+            <ion-label>Services</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
