--- a/repair-shop-mobile-frontend/src/app/cars/car-modal/car-modal.component.html
+++ b/repair-shop-mobile-frontend/src/app/cars/car-modal/car-modal.component.html
@@ -32,7 +32,7 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">Model name></ion-label>
+            <ion-label position="floating">Model name</ion-label>
             <ion-input type="text" formControlName="model_name"></ion-input>
           </ion-item>
         </ion-col>
