--- a/repair-shop-mobile-frontend/src/app/models/explore/explore.page.html
+++ b/repair-shop-mobile-frontend/src/app/models/explore/explore.page.html
@@ -1,13 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>explore</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button size="small" color="dark"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Models</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">explore</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-list>
+    <app-model-element *ngFor="let model of models" [model]="model"></app-model-element>
+  </ion-list>
 </ion-content>
