--- a/repair-shop-mobile-frontend/src/app/models/explore/model-details/model-details.page.html
+++ b/repair-shop-mobile-frontend/src/app/models/explore/model-details/model-details.page.html
@@ -1,13 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/models/tabs/explore"></ion-back-button>
+    </ion-buttons>
     <ion-title>model-details</ion-title>
+    <ion-buttons slot="end">
+      <ion-fab-button size="small" color="dark" (click)="onEditModel()">
+        <ion-icon name="pencil"></ion-icon>
+      </ion-fab-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">model-details</ion-title>
+      <ion-title>Model details</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-card class="ion-padding">
+    <ion-card-header>
+      <ion-title>Model</ion-title>
+    </ion-card-header>
+    <ion-card-content>
+      <b>Brand name:</b> {{model.brand_name}}
+      <br />
+      <b>Model name:</b> {{model.model_name}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
