--- a/repair-shop-mobile-frontend/src/app/engines/engines.page.html
+++ b/repair-shop-mobile-frontend/src/app/engines/engines.page.html
@@ -1,16 +1,12 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>engines</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">engines</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar>
+    <ion-tab-button tab="explore">
+      <ion-icon name="search"></ion-icon>
+      <ion-label>Explore</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="add">
+      <ion-icon name="add"></ion-icon>
+      <ion-label>Add</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
