--- a/repair-shop-mobile-frontend/src/app/cars/car-modal/car-modal.component.html
+++ b/repair-shop-mobile-frontend/src/app/cars/car-modal/car-modal.component.html
@@ -24,11 +24,15 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">Brand name</ion-label>
-            <ion-input type="text" formControlName="brand_name"></ion-input>
+            <ion-select label="Brand name" placeholder="Choose a brand" formControlName="brand_name">
+              <div *ngFor="let brand of brands">
+                <ion-select-option value="{{brand.name}}">{{brand.name}}</ion-select-option>
+              </div>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
