--- a/repair-shop-mobile-frontend/src/app/reservations/add/add.page.html
+++ b/repair-shop-mobile-frontend/src/app/reservations/add/add.page.html
@@ -31,21 +31,24 @@
           <p>You must add a date of reservation!</p>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size-sm="3" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">License plate</ion-label>
-            <ion-input type="text" formControlName="license_plate"></ion-input>
+            <ion-select label="License plate" placeholder="Choose a car" formControlName="license_plate">
+              <div *ngFor="let car of cars">
+                <ion-select-option value="{{car.license_plate}}">{{car.license_plate}}</ion-select-option>
+              </div>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row
-        *ngIf="addReservationForm.get('license_plate')?.invalid && addReservationForm.get('license_plate')?.touched"
-      >
+      <ion-row *ngIf="addReservationForm.get('license_plate')?.invalid && addReservationForm.get('license_plate')?.touched">
         <ion-col size-sm="6" offset-sm="3">
-          <p>You must add a license plate of a car!</p>
+          <p>You must add a license plate!</p>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size-sm="3" offset-sm="3">
           <ion-item>
