--- a/repair-shop-mobile-frontend/src/app/reservations/reservation-modal/reservation-modal.component.html
+++ b/repair-shop-mobile-frontend/src/app/reservations/reservation-modal/reservation-modal.component.html
@@ -26,14 +26,19 @@
           </ion-item>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">License plate</ion-label>
-            <ion-input type="text" formControlName="license_plate"></ion-input>
+            <ion-select label="License plate" placeholder="Choose a car" formControlName="license_plate">
+              <div *ngFor="let car of cars">
+                <ion-select-option value="{{car.license_plate}}">{{car.license_plate}}</ion-select-option>
+              </div>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
